[gd_scene load_steps=2 format=4]

[ext_resource type="Script" path="res://Scenes/Levels/quiz_2.gd" id="1"]

[node name="Quiz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.08, 0.13, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -380.0
offset_right = 500.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 18.0
offset_right = 980.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 20
text = "Question 1 / 10"
horizontal_alignment = 1

[node name="QuestionLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 65.0
offset_right = 970.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 28
text = "Question?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Option1" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 195.0
offset_right = 950.0
offset_bottom = 255.0
theme_override_font_sizes/font_size = 22
text = "Option 1"

[node name="Option2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 275.0
offset_right = 950.0
offset_bottom = 335.0
theme_override_font_sizes/font_size = 22
text = "Option 2"

[node name="Option3" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 355.0
offset_right = 950.0
offset_bottom = 415.0
theme_override_font_sizes/font_size = 22
text = "Option 3"

[node name="Option4" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 435.0
offset_right = 950.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 22
text = "Option 4"

[node name="NextButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 330.0
offset_top = 610.0
offset_right = 670.0
offset_bottom = 670.0
theme_override_font_sizes/font_size = 24
text = "Next >"

[node name="Stars" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 200.0
offset_top = 510.0
offset_right = 800.0
offset_bottom = 590.0
visible = false
alignment = 1

[node name="Star1" type="Label" parent="Panel/Stars"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "★"
modulate = Color(0.3, 0.3, 0.3, 1)

[node name="Star2" type="Label" parent="Panel/Stars"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "★"
modulate = Color(0.3, 0.3, 0.3, 1)

[node name="Star3" type="Label" parent="Panel/Stars"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "★"
modulate = Color(0.3, 0.3, 0.3, 1)

[node name="NoteLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 555.0
offset_right = 970.0
offset_bottom = 605.0
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = ""
horizontal_alignment = 1
autowrap_mode = 2
visible = false
